--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
         </div>
     </div>
     <script src="script.js"></script>
+
+<img src="peeping-boy.png" id="peeping-boy" class="hide-right">
+
 </body>
 </html>
